# - an entry should not explain why a change was made, but rather what the change was
#   (the explanation of why belongs in the source code itself)
#
# http://www.cybop.net
# - Cybernetics Oriented Programming -
#
# @version $RCSfile: ChangeLog,v $ $Revision: 1.147 $ $Date: 2009-10-06 21:25:26 $ $Author: christian $
# @author Christian Heller <christian.heller@tuxtax.de>
#

2011-09-27  Christian Heller  <christian.heller@tuxtax.de>

        * Continue "executor/converter/decoder/cybol_decoder.c"

2011-09-24  Christian Heller  <christian.heller@tuxtax.de>

        * Adapt constants in "constant/model/cybol/operation/"
        * Adapt "executor/converter/decoder/cybol_decoder.c"

2011-09-19  Christian Heller  <christian.heller@tuxtax.de>

        * Move files from "executor/calculator/" into "executor/calculator/basic/"
        * Add directory "executor/calculator/all/", similar to directory "executor/comparator/all/"
        * Update file "applicator/calculate/calculate.c"

2011-09-18  Christian Heller  <christian.heller@tuxtax.de>

        * Delete file "applicator/calculate/add/integer_add.c"
        * Rename file "applicator/calculate/add.c" into "applicator/calculate/calculate.c"
        * Delete outdated files from "executor/calculator/"
        * Add functions "calculate_fraction_reduce", "calculate_integer_absolute", "calculate_integer_negate"
        * Fill new files in directory "executor/calculator/"

2011-09-13  Christian Heller  <christian.heller@tuxtax.de>

        * Create new structure for files in "executor/calculator/", similar to "executor/comparator/",
            so that operands are processed as vectors and all types and operations considered

2011-09-10  Christian Heller  <christian.heller@tuxtax.de>

        * Rename directory "executor/arithmetiser/" into "executor/calculator/"
        * Move files from "applicator/live/sense/" to "executor/lifeguard/sensor/"
        * Adapt files in directories "executor/lifeguard/" and "applicator/live/"