@@ -11,12 +11,6 @@
 # @author Christian Heller <christian.heller@tuxtax.de>
 #
 
-        * Continue in "executor/converter/decoder/cybol_decoder.c":
-            convert model into runtime (integer) model;
-            factor out "decode_cybol_details" into an own function
-            (as done with "model" loop before)
-        * Prepare "executor/converter/decoder/cybol_decoder.c" for converting
-            ALL abstractions and CERTAIN models from wchar_t into int
         * Merge (?) "memory_abstraction.c" and "primitive_memory_abstraction.c"
         * See "examples/counter/run.cybol"
             <property name="abstraction" channel="inline" abstraction="text/abstraction" model="memory/compound"/>
